--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Email: <input name="email" required="" size="60" type="email"/>
         }
       ]
    });
-    analytics.load("<write_key>", {
+    analytics.load("1TbDzMFdZpq70BagAcIBpbsjLtQh5GLV", {
     integrations: {
       "Segment.io": {
         deliveryStrategy: {
