--- a/index.html
+++ b/index.html
@@ -140,19 +140,19 @@ Email: <input name="email" required="" size="60" type="email"/>
         }
       ]
    });
-    analytics.load("1TbDzMFdZpq70BagAcIBpbsjLtQh5GLV", {
-    integrations: {
-      "Segment.io": {
-        deliveryStrategy: {
-          strategy: "batching",
-          config: {
-            size: 10,
-            timeout: 5000
-          }
-        }
-      }
-    }
-  });
+//     analytics.load("1TbDzMFdZpq70BagAcIBpbsjLtQh5GLV", {
+//     integrations: {
+//       "Segment.io": {
+//         deliveryStrategy: {
+//           strategy: "batching",
+//           config: {
+//             size: 10,
+//             timeout: 5000
+//           }
+//         }
+//       }
+//     }
+//   });
  }
  
 </script>
